--- a/sass styles/_footer.scss
+++ b/sass styles/_footer.scss
@@ -2,9 +2,10 @@
 .attribution { 
     font-size: 11px; 
     text-align: center;
-    margin-top: auto; 
+    margin-top: auto;
+    color: $Very-dark-desaturated-blue; 
 }
 
 .attribution a { 
-    color: hsl(228, 45%, 44%); 
+    color: $Soft-red; 
 }
