--- a/sass styles/_main.scss
+++ b/sass styles/_main.scss
@@ -6,4 +6,17 @@ main{
     height: 509px;
     width: 920px;
     border-radius: 20px;
+
+    @media (max-width: 64rem){
+        width: 720px;
+        grid-template-columns: 300px 1fr;
+        // height: 450px;
+    }
+
+    @media (max-width: 37.5rem) {
+        background: white url(../images/bg-pattern-mobile.svg) no-repeat top;
+        grid-template-columns: 1fr;
+        width: 310px;
+        height: auto;
+    }
 }
